# RealEstateAnalyzer

./: .gitignore  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  app.py  attached_assets  financial_calculator.py  flask_app.py  helpers.py  main.py  pyproject.toml  replit.md  report_generator.py  requirements.txt  utils.py
.github/workflows/: python.yml
static/css/: report.css  style.css  tdc.css
static/js/: app.js
templates/: analyzer_form.html  base.html  dashboard.html  index.html  landing.html  report.html
tests/: test_financial_calculator.py  test_utils.py
