[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "numpy-financial>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "weasyprint>=65.1",
    "sqlalchemy>=2.0.41",
]
